// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`An ETextField > looks like a textfield > empty 1`] = `
<div data-app>
     <div class="e-form-container"
          name="test">
          <div class="v-input v-input--horizontal v-input--center-affix v-input--indent-details v-input--density-default v-theme--light v-locale--is-ltr v-text-field">
               <!---->
               <div class="v-input__control">
                    <div class="v-field v-field--center-affix v-field--variant-filled v-theme--light v-locale--is-ltr">
                         <div class="v-field__overlay"></div>
                         <div class="v-field__loader">
                              <div aria-hidden="true"
                                   aria-valuemax="100"
                                   aria-valuemin="0"
                                   class="v-progress-linear v-theme--light v-locale--is-ltr"
                                   role="progressbar"
                                   style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                                   <!---->
                                   <div class="v-progress-linear__background bg-primary"></div>
                                   <div class="v-progress-linear__buffer bg-primary"
                                        style="width: 0%;"></div>
                                   <transition-stub appear="false"
                                                    css="true"
                                                    name="fade-transition"
                                                    persisted="false">
                                        <div class="v-progress-linear__indeterminate">
                                             <div class="v-progress-linear__indeterminate long bg-primary"></div>
                                             <div class="v-progress-linear__indeterminate short bg-primary"></div>
                                        </div>
                                   </transition-stub>
                                   <!---->
                              </div>
                         </div>
                         <!---->
                         <div class="v-field__field"
                              data-no-activator>
                              <label aria-hidden="true"
                                     class="v-label v-field-label v-field-label--floating">
                                   <!---->
                                   test
                              </label>
                              <label aria-hidden="false"
                                     class="v-label v-field-label"
                                     for
                                     id>
                                   <!---->
                                   test
                              </label>
                              <!---->
                              <div class="v-field__input"
                                   data-no-activator> undefined
                                   <input aria-labelledby="input-v-1-label"
                                          id
                                          size="1"
                                          type="text">
                              </div>
                              <!---->
                         </div>
                         <!---->
                         <!---->
                         <div class="v-field__outline">
                              <!---->
                              <!---->
                         </div>
                    </div>
               </div>
               <!---->
               <!---->
          </div>
     </div>
</div>
`;

exports[`An ETextField > looks like a textfield > with text 1`] = `
<div data-app>
     <div class="e-form-container"
          name="test"
          value="MyText">
          <div class="v-input v-input--horizontal v-input--center-affix v-input--indent-details v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-text-field">
               <!---->
               <div class="v-input__control">
                    <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
                         <div class="v-field__overlay"></div>
                         <div class="v-field__loader">
                              <div aria-hidden="true"
                                   aria-valuemax="100"
                                   aria-valuemin="0"
                                   class="v-progress-linear v-theme--light v-locale--is-ltr"
                                   role="progressbar"
                                   style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                                   <!---->
                                   <div class="v-progress-linear__background bg-primary"></div>
                                   <div class="v-progress-linear__buffer bg-primary"
                                        style="width: 0%;"></div>
                                   <transition-stub appear="false"
                                                    css="true"
                                                    name="fade-transition"
                                                    persisted="false">
                                        <div class="v-progress-linear__indeterminate">
                                             <div class="v-progress-linear__indeterminate long bg-primary"></div>
                                             <div class="v-progress-linear__indeterminate short bg-primary"></div>
                                        </div>
                                   </transition-stub>
                                   <!---->
                              </div>
                         </div>
                         <!---->
                         <div class="v-field__field"
                              data-no-activator>
                              <label aria-hidden="false"
                                     class="v-label v-field-label v-field-label--floating"
                                     for>
                                   <!---->
                                   test
                              </label>
                              <label aria-hidden="true"
                                     class="v-label v-field-label"
                                     id>
                                   <!---->
                                   test
                              </label>
                              <!---->
                              <div class="v-field__input"
                                   data-no-activator> undefined
                                   <input aria-labelledby="input-v-1-label"
                                          id
                                          size="1"
                                          type="text"
                                          value="MyText">
                              </div>
                              <!---->
                         </div>
                         <!---->
                         <!---->
                         <div class="v-field__outline">
                              <!---->
                              <!---->
                         </div>
                    </div>
               </div>
               <!---->
               <!---->
          </div>
     </div>
</div>
`;
